Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ h2 {
 p {
   text-align: center;
   font-style: italic;
-  font-size: 0.8rem;
+  font-size: 1;
   line-height: 1.5;
 }
 
@@ -29,7 +29,7 @@ a {
   color: #793284;
   text-decoration: none;
   font-family: "Patua One", cursive;
-  font-size: 1.15rem;
+  font-size: 1.1rem;
   line-height: 1.5;
 }
 
